--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 
   a= <input type="text" id="ia"><br>
   n= <input type="text" id="in">
-  <script>
+<script language="JavaScript" type="text/javascript">
   var ia = document.getElementById('ia');
   var inn = document.getElementById('in');
   var bb = document.getElementById('bb');
