--- a/index.html
+++ b/index.html
@@ -36,8 +36,8 @@
   </div>
   <div class="rad1">&nbsp;</div>
 
-  a= <input type="text" id="ia"><br>
-  n= <input type="text" id="in">
+  a= <input type="text" id="ia" value="4"><br>
+  n= <input type="text" id="in" value="5">
 <script language="JavaScript" type="text/javascript">
   var ia = document.getElementById('ia');
   var inn = document.getElementById('in');
